2005-08-19  Dalibor Topic  <robilad@kaffe.org>

	* replace/ifaddrs_bsd.c: Added missing includes.

2005-08-19  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/thread.c: Added include for rlim_t.

2005-08-19  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jni/jni-string.c: Added missing include.

2005-08-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-08-18  Lillian Angel  <langel@redhat.com>

        * javax/swing/DefaultCellEditor.java
        (getTreeCellEditorComponent): Implemented.
        * javax/swing/plaf/basic/BasicTreeUI.java
        (isEditing): Implemented.
        (mouseClicked): Moved code to mousePressed
        (mousePressed): Code moved here from mouseClicked and
        added in code to stop editing.
        (selectPath): Default is changed to CONTIGUOUS_TREE_SELECTION
        * javax/swing/tree/DefaultTreeSelectionModel.java
        (DefaultTreeSelectionModel): Default is changed to CONTIGUOUS_TREE_SELECTION.

	2005-08-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicArrowButton.java:
        Set default size to 12.
        * javax/swing/plaf/basic/BasicScrollBarUI.java
        (calculatePreferredSize): Don't restrict width and height to
        a minimum of 20.

	2005-08-18  Keith Seitz  <keiths@redhat.com>

        * vm/reference/gnu/classpath/jdwp/VMIdManager.java: New file
        with example implementation of ID-management for JDWP back-end.
        * gnu/classpath/jdwp/id/JdwpIdFactory.java: Removed. Now part of
        VMIdManager.

	2005-08-18  Lillian Angel  <langel@redhat.com>

        * javax/swing/plaf/basic/BasicTreeUI.java
        (setHashColor): Implemented.
        (getRowForPath): Implemented.

	2005-08-18  Lillian Angel  <langel@redhat.com>

        * javax/swing/tree/DefaultTreeCellRenderer.java
        (paint): Added check for null border.

	2005-08-18  Roman Kennke  <roman@kennke.org>

        * java/awt/FlowLayout.java