@@ -43,8 +43,17 @@ exception statement from your version. */
 #include <sys/types.h>
 #endif
 
+#ifdef HAVE_SYS_SELECT_H
 #include <sys/select.h>
+#endif
+
+#ifdef HAVE_SYS_TIME_H
 #include <sys/time.h>
+#endif
+
+#ifdef HAVE_UNISTD_H
+#include <unistd.h>
+#endif
 
 #include <string.h>
 
